--- a/test/fullscale_tests/test_heat_transfer/heat_transfer.yaml
+++ b/test/fullscale_tests/test_heat_transfer/heat_transfer.yaml
@@ -49,7 +49,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "heat_transfer"
-      Output Type: Exodus
+      Output File Type: Exodus
       Number of Output Steps: 10
       Output Variables:
         Temperature: True
