--- a/examples/functionalities.yaml
+++ b/examples/functionalities.yaml
@@ -94,6 +94,7 @@ PeriLab:
             Safety Factor: 1.0
     Outputs: 
         Output1:
+            Flush File: False
             Output Filename: "Name"
             Output Frequency: 1
             Number of Output Steps: 1
