--- a/test/fullscale_tests/test_thermal_flow/thermal_flow_correspondence.yaml
+++ b/test/fullscale_tests/test_thermal_flow/thermal_flow_correspondence.yaml
@@ -11,8 +11,8 @@ PeriLab:
     Input Mesh File: "test_mesh.txt"
   Physics:
     Pre Calculation:
-        Deformed Bond Geometry: true
-        Shape Tensor: true
+      Deformed Bond Geometry: true
+      Shape Tensor: true
     Thermal Models:
       Thermal test:
         Thermal Model: "Thermal Flow"
@@ -54,7 +54,7 @@ PeriLab:
   Outputs:
     Output1:
       Output Filename: "thermal_flow_correspondence"
-      Output Type: Exodus
+      Output File Type: Exodus
       Number of Output Steps: 10
       Output Variables:
         Temperature: True
