--- a/examples/Dogbone/Dogbone.yaml
+++ b/examples/Dogbone/Dogbone.yaml
@@ -24,6 +24,10 @@ PeriLab:
         Young's Modulus: 7.0e+5
         Poisson's Ratio: 0.33
         Zero Energy Mode Control: "Global"
+    Damage Models:
+      Damage:
+        Critical Value: 10.1
+        Damage Model: Critical Energy
   Boundary Conditions:
     BC_1:
       Coordinate: x
@@ -51,7 +55,7 @@ PeriLab:
       Density: 1.4e-8
       Horizon: 0.301
       Material Model: PMMA
-      # Damage Model: DamageTest
+      Damage Model: Damage
     block_4:
       Block Names: block_4
       Density: 1.4e-8
@@ -62,18 +66,42 @@ PeriLab:
       Density: 1.4e-8
       Horizon: 0.301
       Material Model: PMMA
+  Compute Class Parameters:
+    External_Forces:
+      Compute Class: "Block_Data"
+      Calculation Type: "Sum"
+      Block: "block_1"
+      Variable: "Forces"
+    External_Displacements:
+      Compute Class: "Block_Data"
+      Calculation Type: "Maximum"
+      Block: "block_1"
+      Variable: "Displacements"
   Outputs:
     Output:
-      Output Frequency: 1
-      Output File Type: ExodusII
+      Number of Output Steps: 10
+      Output File Type: Exodus
       Output Filename: Dogbone_Output
-      Output Format: BINARY
+      Flush File: true
       Output Variables:
+        Damage: true
         Displacements: true
         Forces: true
         Number of Neighbors: true
+        External_Forces: True
+        External_Displacements: True
+    Output2:
+      Number of Output Steps: 10
+      Flush File: False
+      Output File Type: CSV
+      Output Filename: Dogbone_Output
+      Output Variables:
+        External_Forces: True
+        External_Displacements: True
   Solver:
-    Final Time: 1e-6
+    Material Models: true
+    Damage Models: true
+    Final Time: 1e-7
     Initial Time: 0.0
     Verbose: false
     Verlet:
