--- a/test/fullscale_tests/test_BCs/displacements.yaml
+++ b/test/fullscale_tests/test_BCs/displacements.yaml
@@ -21,14 +21,17 @@ PeriLab:
       Block Names: "block_1"
       Density: 2.7e-9
       Horizon: 2.1
+      Material Model: Mat_1
     block_2:
       Block Names: "block_2"
       Density: 2.7e-9
       Horizon: 2.1
+      Material Model: Mat_1
     block_3:
       Block Names: "block_3"
       Density: 2.7e-9
       Horizon: 2.1
+      Material Model: Mat_1
   Boundary Conditions:
     BC_1:
       Type: "Displacements"
@@ -46,6 +49,7 @@ PeriLab:
       Coordinate: "z"
       Value: "if t>0.00001 0 else 0.1 end"
   Solver:
+    Material Models: False
     Solve For Displacement: True
     Initial Time: 0.0
     Final Time: 5.0e-5
