--- a/test/fullscale_tests/test_BCs/temperature.yaml
+++ b/test/fullscale_tests/test_BCs/temperature.yaml
@@ -22,16 +22,19 @@ PeriLab:
       Density: 2.7e-9
       Horizon: 2.1
       Specific Heat Capacity: 0.1
+      Material Model: Mat_1
     block_2:
       Block Names: "block_2"
       Density: 2.7e-9
       Horizon: 2.1
       Specific Heat Capacity: 0.1
+      Material Model: Mat_1
     block_3:
       Block Names: "block_3"
       Density: 2.7e-9
       Horizon: 2.1
       Specific Heat Capacity: 0.1
+      Material Model: Mat_1
   Boundary Conditions:
     BC_1:
       Type: "Temperature"
