--- a/test/fullscale_tests/test_thermal_expansion/thermal_expansion_correspondence.yaml
+++ b/test/fullscale_tests/test_thermal_expansion/thermal_expansion_correspondence.yaml
@@ -11,12 +11,11 @@ PeriLab:
   Physics:
     Material Models:
       Test:
-        #Material Model: "PD Solid Elastic"
         Material Model: "Correspondence Elastic"
         Symmetry: "isotropic plane stress"
         Young's Modulus: 7.0e+5
         Poisson's Ratio: 0.33
-        Zero Energy Mode Control: "Global"
+        Zero Energy Control: "Global"
     Thermal Models:
       Thermal test:
         Thermal Model: "Thermal Expansion"
