--- a/examples/DCB/DCBmodel.yaml
+++ b/examples/DCB/DCBmodel.yaml
@@ -71,7 +71,7 @@ PeriLab:
   Outputs:
     Output1:
       Number of Output Steps: 100
-      Output Filename: DCBmodel_Output1
+      Output Filename: DCBmodel_Output1_1core
       Output File Type: Exodus
       Output Variables:
         Damage: true
@@ -84,7 +84,7 @@ PeriLab:
         Cauchy Stress: True
     Output2:
       Number of Output Steps: 200
-      Output Filename: DCBmodel_Output2
+      Output Filename: DCBmodel_Output2_1core
       Output File Type: Exodus
       Output Variables:
         Damage: true
@@ -109,7 +109,7 @@ PeriLab:
       Deformed Bond Geometry: true
       Shape Tensor: false
   Solver:
-    Final Time: 0.0002
+    Final Time: 0.0004
     Initial Time: 0.0
     Material Models: true
     Damage Models: true
