--- a/examples/Undulations/Smetana.yaml
+++ b/examples/Undulations/Smetana.yaml
@@ -7,71 +7,71 @@ PeriLab:
     block_1:
       Block Names: block_1
       Damage Model: dam_1
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10808756666769913
       Material Model: mat_1
     block_10:
       Block Names: block_10
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10520909721162183
-      Material Model: mat_1
+      Material Model: mat_10
     block_11:
       Block Names: block_11
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10534124295901504
-      Material Model: mat_1
+      Material Model: mat_11
     block_12:
       Block Names: block_12
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10520909721162187
-      Material Model: mat_1
+      Material Model: mat_12
     block_2:
       Block Names: block_2
       Damage Model: dam_1
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10790221275321964
-      Material Model: mat_1
+      Material Model: mat_2
     block_3:
       Block Names: block_3
       Damage Model: dam_1
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10793038889869432
-      Material Model: mat_1
+      Material Model: mat_3
     block_4:
       Block Names: block_4
       Damage Model: dam_1
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10769470134067027
-      Material Model: mat_1
+      Material Model: mat_4
     block_5:
       Block Names: block_5
       Damage Model: dam_1
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.1053327028239361
-      Material Model: mat_1
+      Material Model: mat_5
     block_6:
       Block Names: block_6
       Damage Model: dam_1
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10520435698741722
-      Material Model: mat_1
+      Material Model: mat_6
     block_7:
       Block Names: block_7
       Damage Model: dam_1
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10520435698842057
-      Material Model: mat_1
+      Material Model: mat_7
     block_8:
       Block Names: block_8
       Damage Model: dam_1
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10559265062785532
-      Material Model: mat_1
+      Material Model: mat_8
     block_9:
       Block Names: block_9
-      Density: 2.78e-06
+      Density: 2.78e-07
       Horizon: 0.10534124295901519
-      Material Model: mat_1
+      Material Model: mat_9
   Boundary Conditions:
     BC_1:
       Coordinate: x
@@ -115,6 +115,8 @@ PeriLab:
         Damage: True
         Angles: True
         Orientations: True
+        Strain: True
+        Cauchy Stress: True
     Output2:
       Flush File: False
       Number of Output Steps: 100
@@ -127,30 +129,70 @@ PeriLab:
   Physics:
     Damage Models:
       dam_1:
-        Critical Value: 0.25
-        Damage Model: Critical Energy
-        Interblock Critical Value 1_2: 0.025
-        Interblock Critical Value 2_3: 0.025
-        Interblock Critical Value 3_4: 0.025
-        Interblock Critical Value 4_5: 0.025
-        Interblock Critical Value 5_6: 0.025
-        Interblock Critical Value 6_7: 0.025
-        Interblock Critical Value 7_8: 0.025
-        Interblock Damage: true
+        Critical Value: 2.5e+0
+        Damage Model: Critical Stretch
+        Interblock Critical Value 1_2: 2.5e-1
+        Interblock Critical Value 2_3: 2.5e-1
+        Interblock Critical Value 3_4: 2.5e-1
+        Interblock Critical Value 4_5: 2.5e-1
+        Interblock Critical Value 5_6: 2.5e-1
+        Interblock Critical Value 6_7: 2.5e-1
+        Interblock Critical Value 7_8: 2.5e-1
+        Interblock Critical Value 2_1: 2.5e-1
+        Interblock Critical Value 3_2: 2.5e-1
+        Interblock Critical Value 4_3: 2.5e-1
+        Interblock Critical Value 5_4: 2.5e-1
+        Interblock Critical Value 6_5: 2.5e-1
+        Interblock Critical Value 7_6: 2.5e-1
+        Interblock Critical Value 8_7: 2.5e-1
+        Interblock Damage: false
     Material Models:
       mat_1:
-        C11: 168977.7988309544
-        C12: 5849.704163166061
-        C13: 5849.704163166061
+        C11: 53619.92831989742
+        C12: 42419.92831989742
+        C13: 5826.105142734548
+        C14: 0.0
+        C15: 0.0
+        C16: 39393.823177162834
+        C22: 53619.92831989742
+        C23: 5826.105142734548
+        C24: 0.0
+        C25: 0.0
+        C26: 39393.823177162834
+        C33: 11402.506122303113
+        C34: 0.0
+        C35: 0.0
+        C36: 23.599020431513775
+        C44: 4200.000000000001
+        C45: 1400.0
+        C46: 0.0
+        C55: 4200.000000000001
+        C56: 0.0
+        C66: 42170.22415673136
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_10:
+        C11: 168977.79883095485
+        C12: 5849.704163166103
+        C13: 5849.704163166103
         C14: 0.0
         C15: 0.0
         C16: 0.0
-        C22: 11402.506122303113
-        C23: 5802.506122303033
+        C22: 11402.506122303133
+        C23: 5802.506122303073
         C24: 0.0
         C25: 0.0
         C26: 0.0
-        C33: 11402.506122303113
+        C33: 11402.506122303133
         C34: 0.0
         C35: 0.0
         C36: 0.0
@@ -165,7 +207,337 @@ PeriLab:
         Material Symmetry: Anisotropic
         Plane Stress: true
         Poisson's Ratio: 0.33999999999999997
-        Zero Energy Mode Control: Global
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_11:
+        C11: 168977.79883095485
+        C12: 5849.704163166103
+        C13: 5849.704163166103
+        C14: 0.0
+        C15: 0.0
+        C16: 0.0
+        C22: 11402.506122303133
+        C23: 5802.506122303073
+        C24: 0.0
+        C25: 0.0
+        C26: 0.0
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: 0.0
+        C44: 2800.0
+        C45: 0.0
+        C46: 0.0
+        C55: 5600.0
+        C56: 0.0
+        C66: 5600.0
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_12:
+        C11: 168977.79883095485
+        C12: 5849.704163166103
+        C13: 5849.704163166103
+        C14: 0.0
+        C15: 0.0
+        C16: 0.0
+        C22: 11402.506122303133
+        C23: 5802.506122303073
+        C24: 0.0
+        C25: 0.0
+        C26: 0.0
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: 0.0
+        C44: 2800.0
+        C45: 0.0
+        C46: 0.0
+        C55: 5600.0
+        C56: 0.0
+        C66: 5600.0
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_2:
+        C11: 11402.506122303133
+        C12: 5849.704163166103
+        C13: 5802.506122303073
+        C14: 0.0
+        C15: 0.0
+        C16: 3.4579115024470197e-13
+        C22: 168977.79883095485
+        C23: 5849.704163166103
+        C24: 0.0
+        C25: 0.0
+        C26: 9.302912741773177e-12
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: 2.890046483446759e-15
+        C44: 5600.0
+        C45: 1.7145055188062946e-13
+        C46: 0.0
+        C55: 2800.0
+        C56: 0.0
+        C66: 5600.0
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_3:
+        C11: 53619.92831989757
+        C12: 42419.92831989757
+        C13: 5826.105142734589
+        C14: 0.0
+        C15: 0.0
+        C16: -39393.82317716294
+        C22: 53619.92831989757
+        C23: 5826.105142734589
+        C24: 0.0
+        C25: 0.0
+        C26: -39393.82317716294
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: -23.599020431514685
+        C44: 4200.000000000001
+        C45: -1400.0
+        C46: 0.0
+        C55: 4200.000000000001
+        C56: 0.0
+        C66: 42170.224156731456
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_4:
+        C11: 168977.79883095485
+        C12: 5849.704163166103
+        C13: 5849.704163166103
+        C14: 0.0
+        C15: 0.0
+        C16: 0.0
+        C22: 11402.506122303133
+        C23: 5802.506122303073
+        C24: 0.0
+        C25: 0.0
+        C26: 0.0
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: 0.0
+        C44: 2800.0
+        C45: 0.0
+        C46: 0.0
+        C55: 5600.0
+        C56: 0.0
+        C66: 5600.0
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_5:
+        C11: 168977.79883095485
+        C12: 5849.704163166103
+        C13: 5849.704163166103
+        C14: 0.0
+        C15: 0.0
+        C16: 0.0
+        C22: 11402.506122303133
+        C23: 5802.506122303073
+        C24: 0.0
+        C25: 0.0
+        C26: 0.0
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: 0.0
+        C44: 2800.0
+        C45: 0.0
+        C46: 0.0
+        C55: 5600.0
+        C56: 0.0
+        C66: 5600.0
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_6:
+        C11: 53619.92831989757
+        C12: 42419.92831989757
+        C13: 5826.105142734589
+        C14: 0.0
+        C15: 0.0
+        C16: -39393.82317716294
+        C22: 53619.92831989757
+        C23: 5826.105142734589
+        C24: 0.0
+        C25: 0.0
+        C26: -39393.82317716294
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: -23.599020431514685
+        C44: 4200.000000000001
+        C45: -1400.0
+        C46: 0.0
+        C55: 4200.000000000001
+        C56: 0.0
+        C66: 42170.224156731456
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_7:
+        C11: 11402.506122303133
+        C12: 5849.704163166103
+        C13: 5802.506122303073
+        C14: 0.0
+        C15: 0.0
+        C16: 3.4579115024470197e-13
+        C22: 168977.79883095485
+        C23: 5849.704163166103
+        C24: 0.0
+        C25: 0.0
+        C26: 9.302912741773177e-12
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: 2.890046483446759e-15
+        C44: 5600.0
+        C45: 1.7145055188062946e-13
+        C46: 0.0
+        C55: 2800.0
+        C56: 0.0
+        C66: 5600.0
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_8:
+        C11: 53619.92831989742
+        C12: 42419.92831989742
+        C13: 5826.105142734548
+        C14: 0.0
+        C15: 0.0
+        C16: 39393.823177162834
+        C22: 53619.92831989742
+        C23: 5826.105142734548
+        C24: 0.0
+        C25: 0.0
+        C26: 39393.823177162834
+        C33: 11402.506122303113
+        C34: 0.0
+        C35: 0.0
+        C36: 23.599020431513775
+        C44: 4200.000000000001
+        C45: 1400.0
+        C46: 0.0
+        C55: 4200.000000000001
+        C56: 0.0
+        C66: 42170.22415673136
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
+        Symmetry: isotropic plane stress
+        Thermal Bond Based: true
+        Thickness: 1.0
+        Young's Modulus: 165000.0
+        Zero Energy Control: "Global"
+      mat_9:
+        C11: 168977.79883095485
+        C12: 5849.704163166103
+        C13: 5849.704163166103
+        C14: 0.0
+        C15: 0.0
+        C16: 0.0
+        C22: 11402.506122303133
+        C23: 5802.506122303073
+        C24: 0.0
+        C25: 0.0
+        C26: 0.0
+        C33: 11402.506122303133
+        C34: 0.0
+        C35: 0.0
+        C36: 0.0
+        C44: 2800.0
+        C45: 0.0
+        C46: 0.0
+        C55: 5600.0
+        C56: 0.0
+        C66: 5600.0
+        Hourglass Coefficient: 1.0
+        Material Model: Correspondence Elastic
+        Material Symmetry: Anisotropic
+        Plane Stress: true
+        Poisson's Ratio: 0.33999999999999997
+        Stabilization Type: Global Stiffness
         Symmetry: isotropic plane stress
         Thermal Bond Based: true
         Thickness: 1.0
