--- a/test/fullscale_tests/test_thermal_expansion/thermal_expansion_correspondence.yaml
+++ b/test/fullscale_tests/test_thermal_expansion/thermal_expansion_correspondence.yaml
@@ -7,7 +7,7 @@ PeriLab:
     Node Sets:
       Node Set 1: 1 2 3 4 5 6 7 8 9 10 11 12
     Type: "Text File"
-    Input Mesh File: "test_mesh.txt"
+    Input Mesh File: "mesh.txt"
   Physics:
     Material Models:
       Test:
