--- a/test/fullscale_tests/test_thermal_expansion/thermal_expansion_bond_based.yaml
+++ b/test/fullscale_tests/test_thermal_expansion/thermal_expansion_bond_based.yaml
@@ -11,9 +11,11 @@ PeriLab:
   Physics:
     Material Models:
       Test:
-        Material Model: "Bond-based Elastic"
+        Material Model: "Bond-based Elastic"    
+        Symmetry: "isotropic plane stress"
         Young's Modulus: 7.0e+10
         Poisson's Ratio: 0.3
+        Zero Energy Control: "Global"
     Thermal Models:
       Thermal test:
         Thermal Model: "Thermal Expansion"
@@ -23,21 +25,21 @@ PeriLab:
       Block Names: "block_1"
       Material Model: "Test"
       Thermal Model: "Thermal test"
-      Density: 200
-      Horizon: 0.00151
+      Density: 20
+      Horizon: 0.001505
       Specific Heat Capacity: 0.33
     block_2:
       Block Names: "block_2"
       Material Model: "Test"
       Thermal Model: "Thermal test"
-      Density: 200
-      Horizon: 0.00151
+      Density: 20
+      Horizon: 0.001505
       Specific Heat Capacity: 0.33
   Boundary Conditions:
     BC_1:
       Type: "Temperature"
       Node Set: "Node Set 3"
-      Value: "1*t"
+      Value: "100*t"
   Solver:
     Material Models: True
     Thermal Models: True
@@ -45,13 +47,14 @@ PeriLab:
     Initial Time: 0.0
     Final Time: 2.01e-8
     Verlet:
+      #Fixed dt: 1e-9
       Safety Factor: 1.00
-      Numerical Damping: 1e-02
+      Numerical Damping: 0
   Outputs:
     Output1:
       Output Filename: "thermal_expansion_bond_based"
       Output File Type: Exodus
-      Number of Output Steps: 10
+      Number of Output Steps: 40
       Output Variables:
         Temperature: True
         Displacements: True
