--- a/examples/functionalities.yaml
+++ b/examples/functionalities.yaml
@@ -12,25 +12,25 @@ PeriLab:
         Bond Filters:
             bf_1:
                 Type: "Rectangular_Plane"
-                Normal_X: 0.0 
-                Normal_Y: 1.0 
-                Normal_Z: 0.0 
-                Lower_Left_Corner_X: -0.006 
-                Lower_Left_Corner_Y: 0.0 
-                Lower_Left_Corner_Z: -0.01 
-                Bottom_Unit_Vector_X: 1.0 
-                Bottom_Unit_Vector_Y: 0.0 
-                Bottom_Unit_Vector_Z: 0.0 
-                Bottom_Length: 0.01
-                Side_Length: 0.01#
+                Normal X: 0.0 
+                Normal Y: 1.0 
+                Normal Z: 0.0 
+                Lower Left Corner X: -0.006 
+                Lower Left Corner Y: 0.0 
+                Lower Left Corner Z: -0.01 
+                Bottom Unit Vector X: 1.0 
+                Bottom Unit Vector Y: 0.0 
+                Bottom Unit Vector Z: 0.0 
+                Bottom Length: 0.01
+                Side Length: 0.01#
             bf_1:
                 Type: "Circular_Plane"
-                Normal_X: 0.0 
-                Normal_Y: 1.0 
-                Normal_Z: 0.0 
-                Center_X: -0.006 
-                Center_Y: 0.0 
-                Center_Z: -0.01 
+                Normal X: 0.0 
+                Normal Y: 1.0 
+                Normal Z: 0.0 
+                Center X: -0.006 
+                Center Y: 0.0 
+                Center Z: -0.01 
                 Radius: 1.0                
     Physics:
         Pre Calculation:
