--- a/test/fullscale_tests/test_DCB/DCBmodel_correspondence.yaml
+++ b/test/fullscale_tests/test_DCB/DCBmodel_correspondence.yaml
@@ -56,17 +56,17 @@ PeriLab:
     Type: Text File
     Bond Filters:
       bf_1:
-        Bottom_Length: 2.0
-        Bottom_Unit_Vector_X: 1.0
-        Bottom_Unit_Vector_Y: 0.0
-        Bottom_Unit_Vector_Z: 0.0
-        Lower_Left_Corner_X: -0.5
-        Lower_Left_Corner_Y: 0.0
-        Lower_Left_Corner_Z: -1.0
-        Normal_X: 0.0
-        Normal_Y: 1.0
-        Normal_Z: 0.0
-        Side_Length: 2.0
+        Bottom Length: 2.0
+        Bottom Unit Vector X: 1.0
+        Bottom Unit Vector Y: 0.0
+        Bottom Unit Vector Z: 0.0
+        Lower Left Corner X: -0.5
+        Lower Left Corner Y: 0.0
+        Lower Left Corner Z: -1.0
+        Normal X: 0.0
+        Normal Y: 1.0
+        Normal Z: 0.0
+        Side Length: 2.0
         Type: Rectangular_Plane
   Outputs:
     Output1:
